# insulator2

./: .gitignore  .prettierignore  .releaserc.json  CHANGELOG.md  README.md  codecov.yml  index.html  package.json  tsconfig.json  vcpkg.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  fossa.yml  snyk.yml
.husky/: pre-push
backend/: .gitignore  Cargo.toml  package.json  rustfmt.toml  tarpaulin-report.html  tauri.conf.json
backend/capabilities/: migrated.json
backend/icons/: icon.afphoto
backend/src/: main.rs
backend/src/api/: admin.rs  cluster.rs  configuration.rs  consumer.rs  error.rs  mod.rs  notification.rs  producer.rs  schema_registry.rs  state.rs  types.rs  utils.rs
backend/src/core/: types.rs
backend/src/core/admin/: client.rs  consumer_admin.rs  error.rs  topic_admin.rs
backend/src/core/avro/: avro_schema.rs  avro_to_json.rs  error.rs  helpers.rs  json_to_avro.rs  mod.rs  parser_e2e_tests.rs  schema_provider.rs
backend/src/core/avro/test_files/: 1_good_input.json  1_schema.json
backend/src/core/avro/test_schemas/: nested_refs.json
backend/src/core/configuration/: configuration_provider.rs  error.rs  kafka_client_config.rs  mod.rs  store_types.rs  types.rs
backend/src/core/consumer/: client.rs  error.rs  mod.rs  types.rs
backend/src/core/parser/: error.rs  mod.rs
backend/src/core/producer/: client.rs  error.rs  record_parser.rs
backend/src/core/record_store/: error.rs  mod.rs  query.rs  record_parser.rs  sqlite_store.rs  topic_store.rs
backend/src/core/schema_registry/: client.rs  error.rs  http_client.rs  mod.rs
backend/src/integration_tests/: admin_it.rs  consumer_group_admin_it.rs  mod.rs  topic_admin_it.rs
backend/src/lib/: cluster.rs  error.rs  error_callback.rs  mod.rs  types.rs
backend/src/lib/admin/: client.rs  consumer_admin.rs  error.rs  mod.rs  topic_admin.rs
backend/src/lib/avro/: avro_parser.rs  avro_schema.rs  avro_to_json.rs  error.rs  helpers.rs  json_to_avro.rs  mod.rs  parser_e2e_tests.rs  schema_provider.rs
backend/src/lib/avro/test_files/: 1_good_input.json  1_schema.json  2_good_input.json  2_schema.json
backend/src/lib/avro/test_schemas/: multiple_refs.json  schema.json
backend/src/lib/configuration/: config_store.rs  configuration_provider.rs  error.rs  kafka_client_config.rs  legacy_config.rs  mod.rs  store_types.rs  types.rs
backend/src/lib/consumer/: client.rs  error.rs  mod.rs  types.rs
backend/src/lib/parser/: avro_parser.rs  error.rs  mod.rs  parser.rs  record_parser.rs  schema_provider.rs  string_parser.rs
backend/src/lib/producer/: client.rs  error.rs  mod.rs  record_parser.rs
backend/src/lib/record_store/: error.rs  mod.rs  query.rs  record_parser.rs  sqlite_store.rs  topic_store.rs
backend/src/lib/schema_registry/: client.rs  error.rs  http_client.rs  mod.rs  resolved_avro_schema.rs  types.rs
backend/src/lib/schema_registry/avro_test_files/: schema.json
docs/: Gemfile  _config.yml  index.markdown
frontend/: .prettierignore  package.json  tsconfig.json  vite.config.ts
frontend/src/: init-monaco.ts  main.tsx  test-setup.ts
manifests/: update-darwin.json  update-linux.json  update-windows.json
scripts/: install-openssl.ps1  publish.sh  update-manifest.py  update-signatures.sh  update_template.json
src/: App.tsx  Routing.tsx  app-state-provider.tsx  kafka.ts  main.tsx  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.afphoto  icon.icns
src-tauri/src/: configuration.rs  error.rs  kafka.rs  main.rs  telemetry.rs
src-tauri/src/api/: admin.rs  configuration.rs  consumer.rs  error.rs  mod.rs  notification.rs  schema_registry.rs  state.rs  types.rs  utils.rs
src-tauri/src/configuration/: config_store.rs  error.rs  insulator_config.rs  mod.rs  model.rs
src-tauri/src/kafka/: admin.rs  consumer.rs  consumer_client.rs  consumer_state.rs  error.rs  mod.rs
src-tauri/src/kafka/admin/: client.rs  mod.rs  types.rs
src-tauri/src/kafka/consumer/: avro_parser.rs  client.rs  create_consumer.rs  helpers.rs  mod.rs  notification.rs  parser.rs  setup_consumer.rs  state.rs  string_parser.rs  types.rs
src-tauri/src/kafka/consumer/parser/: avro_parser.rs  mod.rs  record_parser.rs  string_parser.rs
src-tauri/src/lib/: cluster.rs  error.rs  mod.rs  types.rs
src-tauri/src/lib/admin/: client.rs  consumer_admin.rs  mod.rs  topic_admin.rs  types.rs
src-tauri/src/lib/configuration/: config_store.rs  kafka_client_config.rs  legacy_config.rs  mod.rs  store_types.rs  types.rs
src-tauri/src/lib/consumer/: client.rs  create_consumer.rs  mod.rs  types.rs
src-tauri/src/lib/parser/: avro_parser.rs  mod.rs  record_parser.rs  string_parser.rs
src-tauri/src/lib/record_store/: app_store.rs  error.rs  mod.rs  query.rs  raw_store.rs  sqlite_store.rs  topic_store.rs  types.rs
src-tauri/src/lib/schema_registry/: client.rs  error.rs  http_client.rs  mod.rs  types.rs
src-tauri/src/lib/schema_registry/avro_test_files/: ref_to_another_ns.json
src-tauri/src/schema_registry/: client.rs  error.rs  http_client.rs  mod.rs
src/components/: index.ts  infinite-table.tsx  navbar-link.tsx  notification-bar.tsx  search-input.tsx  sidebar-item.tsx  sidebar.tsx  text.ts  text.tsx  topbar.tsx
src/models/: configurations.ts  index.ts  kafka.ts  schema-registry.ts
src/pages/: clusters.tsx  index.ts  settings.tsx
src/providers/: app-state-provider.tsx  index.ts  notification-provider.tsx  user-settings-provider.tsx
src/tauri/: admin.ts  configuration.ts  consumer.ts  error.ts  schema-registry.ts
webapp/: init-monaco.ts  main.tsx  routing.tsx  test-setup.ts
webapp/components/: code-editor.tsx  index.ts  minimize-button.tsx  resizable-modal.tsx  search-input.test.tsx  search-input.tsx  sidebar-item.tsx  sidebar.tsx  text.tsx
webapp/helpers/: date-time.test.ts
webapp/hooks/: use-cache.ts  use-favorites.ts
webapp/models/: configurations.ts  kafka.ts
webapp/pages/: index.ts
webapp/providers/: notification-provider.tsx  user-settings-provider.tsx
webapp/tauri/: admin.ts  (+7 more)
website/: index.html  package.json  vite.config.ts
(+174 files in other folders)
