[package]
name = "insulator2"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
dirs = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all", "updater"] }
reqwest = { version = "0.11", features = ["json"] }
url = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", default-features = false }
apache-avro = { version = "0.14.0" }
log = { version = "0.4" }
env_logger = { version = "0.9.0" }
async-trait = "0.1.57"
num-bigint = "0.4"
rust_decimal = "1.26"

[target.'cfg(windows)'.dependencies]
openssl-src = { version = "111", default-features = false }
rdkafka = { version = "0.27", features = ["cmake-build", "ssl-vendored"] } #todo: add "gssapi" to use scram on windows

[target.'cfg(unix)'.dependencies]
rdkafka = { version = "0.27", features = ["cmake-build", "ssl-vendored", "gssapi"] }

[patch.crates-io]
# from: https://github.com/vectordotdev/vector/blob/master/Cargo.toml#L369
# Enables OpenSSL ENGINE support during cross compilation to musl
# TODO remove this branch and instead use the openssl-src feature flag once it is available
#    (see https://github.com/vectordotdev/vector/issues/13695)
openssl-src = { git = "https://github.com/vectordotdev/openssl-src-rs.git", branch  = "enable_engine" }

[dev-dependencies]
httpmock = "0.6"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
